# datahow

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  PROMPTS.md  README.md  exploration.py  pyproject.toml
scripts/: docker_cli.py  sample_payload.json  smoke_docker.sh
src/titer_prediction/: __init__.py  cde.py  data_preprocessing.py  features.py  plotting.py  regression.py  schema.py  sweep.py
src/titer_prediction/service/: __init__.py  app.py  batch_predict.py  config.py  dto.py  errors.py  model_loader.py  predictor.py
tests/: test_data_integrity.py  test_docker_smoke.py  test_service.py  test_service_integration.py  test_sweep.py
