[project]
name = "titer-prediction"
version = "0.1.0"
description = "Predict the final titer of a simulated mAb bioprocess (DataHow ML challenge)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Diederen" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",          # parquet IO for preprocessed feature tables
    "scikit-learn>=1.4",      # CV splitters, metrics, preprocessing
    "scipy>=1.11",            # curve_fit / winsorize for Gompertz features
    "xgboost>=2.0",           # gradient-boosted baseline
    # canonical 22-feature time-series extractor
    "jax>=0.4.28",            # numerical backend for diffrax
    "diffrax>=0.6",           # neural CDE / ODE solvers
    "equinox>=0.11",          # neural-network layers on top of JAX
    "optax>=0.2",             # optimizers for training the CDE
    "marimo>=0.23.13",
    "matplotlib>=3.11.0",
    "tsfel>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
# Convenience entry points; each module also runs via `python -m ...`.
titer-preprocess = "titer_prediction.data_preprocessing:main"
titer-regression = "titer_prediction.regression:main"
titer-cde = "titer_prediction.cde:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/titer_prediction"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible default rule set: pyflakes, pycodestyle, isort, bugbear, pyupgrade.
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
